clean & /vanish